--- a/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
+++ b/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
@@ -1,13 +1,12 @@
 <ion-content>
   <div class='p-[22px]'>
     <h1 class='text-primary text-[20px] leading-[24px] font-bold'>Избранное</h1>
-    <ng-container *ngIf='favourites?.length'>
+    <div *ngIf='favourites?.length' class='mt-[10px]'>
       <app-card-item
         (click)='navigate(item)'
-        class='border-[1px] border-gray-light rounded-[10px] flex-1 m-[5px]'
         *ngFor='let item of favourites'
         [offer]='item'>
       </app-card-item>
-    </ng-container>
+    </div>
   </div>
 </ion-content>
