--- a/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="getOwnOffers($event)">
+  <ion-refresher slot='fixed' (ionRefresh)='getOwnOffers($event)'>
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
@@ -12,50 +12,57 @@
         class='truncate text-[12px] leading-[16px] font-semibold rounded-[12px] px-[15px] py-[13px] transition-all whitespace-nowrap	text-gray-700'
         [class.active]='active === idx' (click)='active = idx'>{{i}}</div>
     </div>
+    <div class='mt-[34px]'>
 
-    <div class='mt-[34px]' *ngIf='ownOffers?.length; else loading'>
-      <div class='mb-[14px]' *ngFor='let offer of ownOffers' (click)='navigate(offer.id)'>
-        <div class='bg-green-100 rounded-[12px] flex items-center justify-center'>
-          <img class='max-w-[330px] max-h-[170px] object-cover' [src]="'https://plastic-market-app.ru/img/' + offer.image[0]"
-               alt=''>
-        </div>
+      <div *ngIf='ownOffers?.length'>
+        <div class='mb-[14px]' *ngFor='let offer of ownOffers' (click)='navigate(offer.id)'>
+          <div class='bg-green-100 rounded-[12px] flex items-center justify-center'>
+            <img class='max-w-[330px] max-h-[170px] object-cover'
+                 [src]="'https://plastic-market-app.ru/img/' + offer.image[0]"
+                 alt=''>
+          </div>
 
-        <div class='flex justify-between mt-[15px]'>
-          <h1 class='text-[12px] leading-[14px] font-medium text-gray-strong'>
-            {{ offer.name }}
-          </h1>
-          <span class='icon icon-burger bg-gray-strong'></span>
-        </div>
+          <div class='flex justify-between mt-[15px]'>
+            <h1 class='text-[12px] leading-[14px] font-medium text-gray-strong'>
+              {{ offer.name }}
+            </h1>
+            <span class='icon icon-burger bg-gray-strong'></span>
+          </div>
 
-        <div>
-          <span class='text-[14px] leading-[17px] font-semibold text-primary mr-[10px]'>{{ '$' + offer.amount  }}</span>
-          <!--          <span class='text-gray-strong text-[10px] leading-[12px] line-through'>$35</span>-->
-        </div>
+          <div>
+            <span
+              class='text-[14px] leading-[17px] font-semibold text-primary mr-[10px]'>{{ '$' + offer.amount  }}</span>
+            <!--          <span class='text-gray-strong text-[10px] leading-[12px] line-through'>$35</span>-->
+          </div>
 
-        <div class='flex justify-between items-center mt-[6px]'>
-          <span class='text-[12px] leading-[14px] text-gray-200'>{{ offer.created_at | date }}</span>
-          <div class='flex justify-center items-center'>
-            <div class='flex items-center'>
-              <span class='icon icon-view bg-gray-strong mr-[5px]'></span>
-              <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>50</span>
-            </div>
-            <div class='ml-[14px] flex items-center'>
-              <span class='icon icon-phone bg-gray-strong mr-[5px] w-[10px] h-[10px]'></span>
-              <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>8</span>
-            </div>
+          <div class='flex justify-between items-center mt-[6px]'>
+            <span class='text-[12px] leading-[14px] text-gray-200'>{{ offer.created_at | date }}</span>
+            <div class='flex justify-center items-center'>
+              <div class='flex items-center'>
+                <span class='icon icon-view bg-gray-strong mr-[5px]'></span>
+                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>50</span>
+              </div>
+              <div class='ml-[14px] flex items-center'>
+                <span class='icon icon-phone bg-gray-strong mr-[5px] w-[10px] h-[10px]'></span>
+                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>8</span>
+              </div>
 
-            <div class='ml-[14px] flex items-center'>
-              <span class='icon icon-heart-svg bg-gray-strong mr-[5px]'></span>
-              <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>3</span>
+              <div class='ml-[14px] flex items-center'>
+                <span class='icon icon-heart-svg bg-gray-strong mr-[5px]'></span>
+                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>3</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <ng-template #loading>
-      <ion-spinner class='text-center w-full'></ion-spinner>
-    </ng-template>
+      <ng-container *ngIf='!loading && ownOffers?.length === 0'>
+        <div class='text-center'>Нет объявление</div>
+      </ng-container>
+      <ng-container *ngIf='loading'>
+        <ion-spinner class='text-center w-full'></ion-spinner>
+      </ng-container>
+    </div>
 
   </div>
 </ion-content>
