--- a/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
+++ b/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
@@ -12,7 +12,7 @@
       <ion-spinner class='text-center w-full'></ion-spinner>
     </ng-container>
     <ng-container *ngIf='!loading && favourites?.length === 0'>
-      <div class='text-center'>Нет избранное</div>
+      <div class='text-center'>"У вас пока нет избранных товаров</div>
     </ng-container>
   </div>
 </ion-content>
