--- a/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
@@ -14,50 +14,59 @@
     </div>
     <div class='mt-[34px]'>
 
-      <div *ngIf='ownOffers?.length'>
-        <div class='mb-[14px]' *ngFor='let offer of ownOffers' (click)='navigate(offer.id)'>
-          <div class='bg-green-100 rounded-[12px] flex items-center justify-center'>
-            <img class='max-w-[330px] max-h-[170px] object-cover'
-                 [src]="'https://plastic-market-app.ru/img/' + offer.image[0]"
-                 alt=''>
-          </div>
+      <ng-container [ngSwitch]='active'>
+        <ng-container *ngSwitchCase='0'>
+          <div *ngIf='ownOffers?.length'>
+            <div class='mb-[14px]' *ngFor='let offer of ownOffers' (click)='navigate(offer.id)'>
+              <div class='bg-green-100 rounded-[12px] flex items-center justify-center'>
+                <img class='max-w-[330px] h-[170px] object-cover'
+                     [src]="'https://plastic-market-app.ru/img/' + offer.image[0]"
+                     alt=''>
+              </div>
 
-          <div class='flex justify-between mt-[15px]'>
-            <h1 class='text-[12px] leading-[14px] font-medium text-gray-strong'>
-              {{ offer.name }}
-            </h1>
-            <span class='icon icon-burger bg-gray-strong'></span>
-          </div>
+              <div class='flex justify-between mt-[15px]'>
+                <h1 class='text-[12px] leading-[14px] font-medium text-gray-strong'>
+                  {{ offer.name }}
+                </h1>
+                <span class='icon icon-burger bg-gray-strong'></span>
+              </div>
 
-          <div>
+              <div>
             <span
               class='text-[14px] leading-[17px] font-semibold text-primary mr-[10px]'>{{ '$' + offer.amount  }}</span>
-            <!--          <span class='text-gray-strong text-[10px] leading-[12px] line-through'>$35</span>-->
-          </div>
-
-          <div class='flex justify-between items-center mt-[6px]'>
-            <span class='text-[12px] leading-[14px] text-gray-200'>{{ offer.created_at | date }}</span>
-            <div class='flex justify-center items-center'>
-              <div class='flex items-center'>
-                <span class='icon icon-view bg-gray-strong mr-[5px]'></span>
-                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>50</span>
-              </div>
-              <div class='ml-[14px] flex items-center'>
-                <span class='icon icon-phone bg-gray-strong mr-[5px] w-[10px] h-[10px]'></span>
-                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>8</span>
+                <!--          <span class='text-gray-strong text-[10px] leading-[12px] line-through'>$35</span>-->
               </div>
 
-              <div class='ml-[14px] flex items-center'>
-                <span class='icon icon-heart-svg bg-gray-strong mr-[5px]'></span>
-                <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>3</span>
+              <div class='flex justify-between items-center mt-[6px]'>
+                <span class='text-[12px] leading-[14px] text-gray-200'>{{ offer.created_at | date }}</span>
+                <div class='flex justify-center items-center'>
+                  <div class='flex items-center'>
+                    <span class='icon icon-view bg-gray-strong mr-[5px]'></span>
+                    <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>50</span>
+                  </div>
+                  <div class='ml-[14px] flex items-center'>
+                    <span class='icon icon-phone bg-gray-strong mr-[5px] w-[10px] h-[10px]'></span>
+                    <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>8</span>
+                  </div>
+
+                  <div class='ml-[14px] flex items-center'>
+                    <span class='icon icon-heart-svg bg-gray-strong mr-[5px]'></span>
+                    <span class='text-[11px] leading-[14px] text-gray-strong font-bold'>3</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </ng-container>
+      </ng-container>
 
       <ng-container *ngIf='!loading && ownOffers?.length === 0'>
-        <div class='text-center'>Нет объявление</div>
+        <div class='text-center'>
+          {{ active === 0
+          ? 'У вас пока нет активных товаров' : active === 1
+            ? 'У вас пока нет неактивных товаров' : active === 2
+              ? 'У вас пока нет товаров на модерации' : ''}}
+        </div>
       </ng-container>
       <ng-container *ngIf='loading'>
         <ion-spinner class='text-center w-full'></ion-spinner>
