--- a/src/app/modules/chat/chat-by-id/chat-by-id.component.html
+++ b/src/app/modules/chat/chat-by-id/chat-by-id.component.html
@@ -24,7 +24,7 @@
     </ng-container>
 
     <ng-container *ngIf='messages.length === 0 && !loading'>
-      <div class='text-center'>Нет сообщений</div>
+      <div class='text-center text-gray-200'>Нет сообщений</div>
     </ng-container>
 
 
