--- a/src/app/modules/chat/chat-list/chat-list.component.html
+++ b/src/app/modules/chat/chat-list/chat-list.component.html
@@ -31,7 +31,7 @@
       </ng-container>
 
       <ng-container *ngIf='chats.length === 0 && !loading'>
-        <div class='text-center'>Нет чатов</div>
+        <div class='text-center text-gray-200'>Нет чатов</div>
       </ng-container>
     </div>
   </div>
