--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -30,7 +30,9 @@
 <ion-menu contentId='main-content'>
   <ion-content>
     <div class='mt-[20px]'>
-      <ion-menu-toggle class='flex items-center px-[25px] py-[10px]' *ngFor='let category of categories'>
+      <ion-menu-toggle class='flex items-center px-[25px] py-[10px]'
+                       *ngFor='let category of categories'
+                       (click)='selectCategory(category.id)'>
         <span class='mr-[17px] icon icon-catalog w-[22px] h-[22px] bg-black-200'></span>
         <p class='mr-[17px] text-[14px] leading-[17px] text-black-100'>{{ category.name }}</p>
         <span class='icon icon-arrow-right w-[13px] h-[13px] bg-black-100'></span>
