--- a/src/app/modules/dashboard/pages/products/products.component.html
+++ b/src/app/modules/dashboard/pages/products/products.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <ng-container *ngIf='!loading && offers?.length === 0'>
-          <div class='text-center'>Нет объявление</div>
+          <div class='text-center text-gray-200'>Нет объявление</div>
       </ng-container>
       <ng-container *ngIf='loading'>
         <ion-spinner class='text-center w-full'></ion-spinner>
