--- a/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
@@ -61,7 +61,7 @@
       </ng-container>
 
       <ng-container *ngIf='!loading && ownOffers?.length === 0'>
-        <div class='text-center'>
+        <div class='text-center text-gray-200'>
           {{ active === 0
           ? 'У вас пока нет активных товаров' : active === 1
             ? 'У вас пока нет неактивных товаров' : active === 2
