--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,7 @@
 
 @import '~swiper/swiper-bundle.css';
 @import '~@ionic/angular/css/ionic-swiper.css';
+@import "./src/theme/variables";
 
 @tailwind base;
 @tailwind components;
