--- a/src/app/modules/dashboard/components/card-item/card-item.component.html
+++ b/src/app/modules/dashboard/components/card-item/card-item.component.html
@@ -8,7 +8,7 @@
     <span class='icon w-[14px] h-[12px] bg-primary absolute top-[10px] right-[7px]'
           [class.icon-heart]='!favouriteService.isFavourite(offer.id)'
           [class.icon-heart-full]='favouriteService.isFavourite(offer.id)'
-          (click)='favouriteService.addFavourite($event, offer.id)'
+          (click)='addOrRemove($event, offer)'
     ></span>
     <img *ngIf='offer?.image; else noImage' class='card-img rounded-t-[8px] w-full h-[130px] object-contain'
          [src]="'https://plastic-market-app.ru/img/' + offer.image[0]" alt=''>
