--- a/src/app/shared/controls/custom-select/custom-select.component.html
+++ b/src/app/shared/controls/custom-select/custom-select.component.html
@@ -1,7 +1,10 @@
-<div class='border-b-[1px] border-gray-50 pb-[16px] flex items-center' (click)='openSelect()'>
-  <span class='icon {{ icon }} w-[18px] h-[18px]'></span>
-  <span class='flex-1 ml-[15px] text-[16px] leading-[17px] text-gray-600'>
-    {{ value?.name ? value?.name : label }}
+<div class='border-b-[1px] border-gray-50 pb-[16px]' (click)='openSelect()' (blur)='onBlur()'>
+  <div *ngIf='label && !placeholder' class='text-[11px] leading-[13px] text-gray-400 mb-[6px]'>{{ label }}</div>
+  <div class='flex items-center'>
+    <span *ngIf='icon' class='icon {{ icon }} w-[18px] h-[18px]'></span>
+    <span [class.ml-[15px]]='icon' class='flex-1 text-[16px] leading-[17px] text-gray-600'>
+    {{ value?.name ? value.name : placeholder }}
   </span>
-  <span class='icon icon-arrow-right w-[7px] h-[13px] bg-purple-900'></span>
+    <span class='icon icon-arrow-right w-[7px] h-[13px] bg-purple-900'></span>
+  </div>
 </div>
