--- a/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
+++ b/src/app/modules/dashboard/pages/favourite-page/favourite-page.component.html
@@ -1,4 +1,6 @@
 <ion-content>
+  <app-tooltip (changeSearch)='changeSearch($event)'></app-tooltip>
+
   <div class='p-[18px]'>
     <h1 class=' pl-[4px] text-primary text-[20px] leading-[24px] font-bold mb-[10px]'>Избранное</h1>
     <div *ngIf='favourites?.length'>
@@ -13,7 +15,7 @@
       <ion-spinner class='text-center w-full'></ion-spinner>
     </ng-container>
     <ng-container *ngIf='!loading && favourites?.length === 0'>
-      <div class='text-center text-gray-200'>У вас пока нет избранных товаров</div>
+      <div class='text-center text-gray-200 mt-[36vh]'>У вас пока нет избранных товаров</div>
     </ng-container>
   </div>
 </ion-content>
