--- a/src/theme/_icons.scss
+++ b/src/theme/_icons.scss
@@ -209,4 +209,9 @@
     mask: url('../assets/icons/expand-outline.svg') no-repeat 50% 50%;
   }
 
+  &-logout {
+    -webkit-mask: url('../assets/icons/log-out-outline.svg') no-repeat 50% 50%;
+    mask: url('../assets/icons/log-out-outline.svg') no-repeat 50% 50%;
+  }
+
 }
