--- a/src/app/modules/dashboard/pages/products/products.component.html
+++ b/src/app/modules/dashboard/pages/products/products.component.html
@@ -1,27 +1,15 @@
 <ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
+  <ion-refresher slot='fixed' (ionRefresh)='refresh($event)'>
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
+  <app-tooltip (changeSearch)='changeSearch($event)'></app-tooltip>
 
-  <div class='p-[22px]'>
-    <div class='flex items-center justify-between'>
-      <ion-menu-toggle class='mr-[12px]'>
-        <span class='icon icon-menu w-[16px]'></span>
-      </ion-menu-toggle>
-      <div class='flex items-center justify-between rounded-[10px] bg-light-gray py-[10px] px-[13px] flex-1 mr-[12px]'>
-        <span class='mr-[8px] icon icon-search w-[20px]'></span>
-        <input type='text' class='mr-[8px] bg-transparent outline-none border-none flex-1'>
-        <span class='icon icon-filter w-[18px]' (click)='openModal()'></span>
-      </div>
-
-      <div class='relative'>
-        <span class='icon icon-notice w-[18px]'></span>
-        <span class='absolute top-0 r-0 rounded-full w-[5px] h-[5px] bg-orange'></span>
-      </div>
-    </div>
-
+  <div class='px-[22px] pb-[22px]'>
     <div>
       <p class='text-primary text-[20px] leading-[24px] font-bold mt-[32px] mb-[27px]'>Полимерное сырье</p>
+      <p *ngIf='offers?.length !== cloneOffers?.length' class='text-[14px] leading-[17px] text-gray-200 mb-[10px] text-right' (click)='offerService.filter$.next({})'>
+        Сброс фильтра</p>
+
       <div
         *ngIf='offers?.length'
         class='grid grid-cols-2 grid-flow mx-[-5px]'>
@@ -33,7 +21,7 @@
       </div>
 
       <ng-container *ngIf='!loading && offers?.length === 0'>
-          <div class='text-center text-gray-200'>Нет объявление</div>
+        <div class='text-center text-gray-200'>Нет объявление</div>
       </ng-container>
       <ng-container *ngIf='loading'>
         <ion-spinner class='text-center w-full'></ion-spinner>
@@ -41,18 +29,18 @@
 
     </div>
 
-<!--    <div>-->
-<!--      <p class='text-primary text-[20px] leading-[24px] font-bold my-[27px]'>Полиэтиленовые смолы</p>-->
+    <!--    <div>-->
+    <!--      <p class='text-primary text-[20px] leading-[24px] font-bold my-[27px]'>Полиэтиленовые смолы</p>-->
 
-<!--      <ion-nav-link-->
-<!--        router-direction='forward'-->
-<!--        [component]='component'-->
-<!--        class='grid grid-cols-2 grid-flow mx-[-5px]'>-->
-<!--        <app-card-item-->
-<!--          class='border-[1px] border-gray-light rounded-[10px] flex-1 m-[5px]'-->
-<!--          *ngFor='let item of [1,2,3,4,5,6]'>-->
-<!--        </app-card-item>-->
-<!--      </ion-nav-link>-->
-<!--    </div>-->
+    <!--      <ion-nav-link-->
+    <!--        router-direction='forward'-->
+    <!--        [component]='component'-->
+    <!--        class='grid grid-cols-2 grid-flow mx-[-5px]'>-->
+    <!--        <app-card-item-->
+    <!--          class='border-[1px] border-gray-light rounded-[10px] flex-1 m-[5px]'-->
+    <!--          *ngFor='let item of [1,2,3,4,5,6]'>-->
+    <!--        </app-card-item>-->
+    <!--      </ion-nav-link>-->
+    <!--    </div>-->
   </div>
 </ion-content>
