--- a/src/app/modules/chat/chat-by-id/chat-by-id.component.scss
+++ b/src/app/modules/chat/chat-by-id/chat-by-id.component.scss
@@ -7,3 +7,11 @@
     padding-bottom: 25px;
   }
 }
+
+.my-message {
+  justify-content: flex-end;
+
+  .bg-primary-100 {
+    background: #c7e4ac;
+  }
+}
